# ARC-AGI

./: .gitignore  README.md  configurations.py  create_training_data.py  engine.py  eval.py  eval_transformer.py  get_arc_generator.py  get_augmentor.py  get_dataloaders.py  get_tokenizer.py  model.py  model_transformer.py  pyproject.toml  train.py  utils.py
data/: prepare.py
tests/: test_eval.py  test_get_augmentor.py  test_get_dataloaders.py  test_get_tokenizer.py  test_prepare.py
